# caddrive

./: .eslintrc.json  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  README2.md  docker-compose.yml  install-getnonfreefonts  package-lock.json  package.json  postman2.json  tests.postman_collection.json  tsconfig.json
applications/: README.md
backend/: README.md  package-lock.json  package.json  tsconfig.json
broker/: README.md  package-lock.json  package.json  tsconfig.json
collections/: README.md  postman-1.json
common/: README.md  package-lock.json  package.json  tsconfig.json
compositions/: README.md  production.yml
datasets/: README.md  development.sql
diagrams/: README.md  classdiagram-v1.md  entities-v1.mmd  entities-v2.mmd  entities-v3.mmd  entities-v4.mmd  entities-v5.mmd  entities.mmd  erDiagram-v1.md  ldraw.mmd  modules.mmd  packages-extended.mmd  packages-reduced.mmd  packages-v2.mmd  packages-v3.mmd  reEntities-v1.drawio  reEntities-v2.drawio  services.mmd  test.drawio
documents/: Dependencies.md  Diagrams.md  Executables.md  Publications.md  Requirements.md  Screenshots.md
examples/: Bridge A.ldr  Bridge B.ldr  Bridge C.ldr  Bridge D.ldr  Bridge v4.4.5.ldr  CADdrive.ldr  bm.ldr  bm_vo.ldr
frontend/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
gateway/: README.md  package-lock.json  package.json  tsconfig.json
images/: social_preview.odg
pypackages/: README.md
pypackages/leofea/: LICENSE  README.md  pyproject.toml
screenshots/: README.md
services/: README.md  (+1 more)
(+435 files in other folders)
