[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caddrive-leofea"
version = "0.0.1"
authors = [
  { name="Christian Zehetner", email="christian.zehetner@fh-wels.at" },
  { name="Georg Hackenberg", email="georg.hackenberg@fh-wels.at" },
]
description = "CodeAster simulation for LDraw models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ghackenberg/caddrive"
Issues = "https://github.com/ghackenberg/caddrive/issues"